tests/positive/constant_task_priority.safe
-- Test: constant_task_priority
-- Description: Local integer constant used in a task priority aspect.
-- Expected: ACCEPT

package constant_Task_Priority

   worker_Priority : constant integer = 5;

   task Worker with Priority = worker_Priority

      loop



